# House_Prices

./: catboost_model.pkl  final-version.ipynb  for_test.csv  house-predict-medium-article.ipynb  imrpove-feature.ipynb  imrpove_feature_version_3.ipynb  main.py  new_version_catboost.ipynb  notebook43213f28ae.ipynb  notebook80180d881d.ipynb  notebookf933883802.ipynb  one-more-prob.ipynb  pyproject.toml  summary_version.ipynb  test_models.ipynb  used_car_price.ipynb
models/: CatBoostClassififer.pkl
processed_files/: saleprice_predictions_for_test.csv
settings/: __init__py.py  constants.py
utils/: dataloader.py  estimator.py  predictor.py  upload_file.py
